--- a/style/index.css
+++ b/style/index.css
@@ -17,12 +17,13 @@ body {
 }
 
 h2 {
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   margin-bottom: 1rem;
   color: #fff;
   border-left: 0.3rem solid #ffcc00;
   padding-left: 0.6rem;
 }
+
 
 
 /* ============================= */
@@ -200,10 +201,15 @@ h2 {
 }
 
 #about p {
-  font-size: 0.7rem;
+  font-size: 1rem;
   line-height: 1.6;
   color: #ddd;
   margin-bottom: 1rem;
+  text-align: justify;
+}
+
+#about h3 {
+  font-size: 1.5rem;
 }
 
 @keyframes fadeIn {
@@ -234,16 +240,41 @@ h2 {
   transform: translateY(-0.3rem);
 }
 
-
 /* ============================= */
 /* 7. RESUME SECTIONS */
 /* ============================= */
-.resume-section {
-  margin-bottom: 2rem;
+.resume-item {
+  margin-bottom: 0.5rem;  
 }
 
+.resume-item h4 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #fff;
+  padding-bottom: 2.5px;
+}
+
+.resume-item .date {
+  font-size: 0.9rem;
+  color: #ffcc00;
+  white-space: nowrap; /* prevents date from wrapping */
+}
+
+/* Optional: address styling */
+.school-address {
+  font-size: 0.85rem;
+  font-style: italic;
+  color: #bbb;
+  margin-top: 0.3rem;
+}
+
+
 .resume-section h3 {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   margin-bottom: 1.2rem;
   color: #fff;
   display: flex;
@@ -429,7 +460,7 @@ footer {
   }
 
   .resume-section h3 { 
-    font-size: 1rem; 
+    font-size: 1.5rem; 
   }
 
   .skill-title { 
