--- a/style/index.css
+++ b/style/index.css
@@ -15,7 +15,36 @@ body {
   padding-top: 70px; 
 }
 
+p {
+  font-size: 1.2rem;
+  margin-left: 1%;
+}
 /* NAVIGATION  */
+
+.icons a {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.yellow-icon {
+  width: 55px;
+  height: 55px;
+  object-fit: contain;
+  object-position: center;
+  background-color: transparent;
+  margin: 0 5px;
+  padding: 5px;
+  cursor: pointer;  /* makes it feel clickable */
+
+  /* filter: brightness(0) saturate(100%)
+          invert(76%) sepia(94%) saturate(749%)
+          hue-rotate(359deg) brightness(104%) contrast(105%);*/
+  transition: transform 0.3s ease, filter 0.3s ease; 
+}
+
+.yellow-icon:hover {
+  transform: scale(1.20); 
+}
 
 .nav-box {
   position: fixed;
@@ -51,7 +80,7 @@ body {
 }
 
 /*  LANDING SECTION */
- 
+
 .landing-wrapper {
   display: flex;
   align-items: center;
@@ -182,11 +211,10 @@ body {
 }
 
 #description {
-  margin: 1% 0;
+  margin: 1% 0 1% 0.5%;
   text-align: justify;
-}
-
-.
+  font-size: 1.2rem;
+} 
 
 .content-section {
   margin-top: 3rem;
@@ -230,8 +258,13 @@ body {
   margin-bottom: 1rem;
 }
 
+.card-container h3 {
+  font-size: 1.3rem;
+}
+
 .card p {
   padding: 0.7rem 1rem 0 1rem;
+  margin-left: 0.5rem;
   text-align: justify;
 }
 
@@ -252,17 +285,15 @@ body {
 }
 
 .about-item h4 {
+  font-size: 1.2rem;
   display: flex;
   justify-content: space-between;
   color: #fff;
+  padding-bottom: 0.2rem;
 }
 
 .about-item .date {
   color: #ffcc00;
-}
-
-.school, .experience {
-  padding-bottom: 0.4rem;
 }
 
 .school-address {
@@ -272,12 +303,20 @@ body {
   margin-top: 0.3rem;
 }
 
+.about-item p {
+  font-size: 1rem;
+}
+
 .skill {
   margin-bottom: 1.2rem;
 }
 
+.skill h4 {
+  font-size: 1.2rem;
+}
+
 .skill-title {
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 500;
   color: #fff;
   padding-left: 2%;
@@ -285,20 +324,18 @@ body {
 
 .skill-percent {
   float: right;
-  font-size: 1rem;
+  font-size: 1.1rem;
   color: #ffcc00;
-  margin-right: 2%;
 }
 
 .skill-bar {
-  width: 96%;
+  width: 98%;
   height: 0.5rem;
   background: #333;
   border-radius: 0.25rem;
   margin-top: 0.4rem;
   overflow: hidden;
   margin-left: 2%;
-  margin-right: 0%;
 }
 
 .skill-progress {
@@ -306,7 +343,10 @@ body {
   background: #ce8f13;
   border-radius: 0.25rem;
   transition: width 1s ease;  
-  margin-right: 2%;
+}
+
+#portfolio p {
+   margin-left: 0;
 }
 
 /* Footer */
@@ -337,3 +377,5 @@ footer {
   .landing-container h1 { font-size: 1.8rem; }
   .btn-enter { font-size: 1rem; padding: 0.6rem 1.2rem; }
 }
+
+
