--- a/style/index.css
+++ b/style/index.css
@@ -74,7 +74,11 @@ p {
   font-size: 1rem;
 }
 
-.top-nav a:hover,
+.top-nav a:hover {
+  color:#bbb;
+  transform: scale(1.15); 
+}
+
 .top-nav a.active {
   color: #ffcc00;
 }
@@ -119,7 +123,7 @@ p {
 
 .landing-container h2 {
   font-size: 2rem;
-  color: #ffcc00;
+  color: #ce8f13;
 }
 
 .landing-container p {
@@ -187,6 +191,14 @@ p {
   gap: 0.5rem;
   border-left: 0.25rem solid #ffcc00;
   padding-left: 0.6rem;
+}
+
+#portfolio {
+  padding-bottom: 2%;
+}
+
+#achiements {
+  padding-bottom: 2%;
 }
 
 #blog {
@@ -346,7 +358,8 @@ p {
 }
 
 #portfolio p {
-   margin-left: 0;
+  margin-top: 2%;
+  margin-left: 0;
 }
 
 /* Footer */
