--- a/style/index.css
+++ b/style/index.css
@@ -34,11 +34,7 @@ p {
   background-color: transparent;
   margin: 0 5px;
   padding: 5px;
-  cursor: pointer;  /* makes it feel clickable */
-
-  /* filter: brightness(0) saturate(100%)
-          invert(76%) sepia(94%) saturate(749%)
-          hue-rotate(359deg) brightness(104%) contrast(105%);*/
+  cursor: pointer;
   transition: transform 0.3s ease, filter 0.3s ease; 
 }
 
@@ -51,7 +47,7 @@ p {
   top: 0;
   right: 0;
   background-color: #121212;
-  border-radius: 0 0 0 1rem;
+  border-radius: 1rem;
   padding: 1rem 0.5rem;
   margin: 1% 2% ;
   box-shadow: 0 0.25rem 0.9rem #121212;
@@ -182,7 +178,7 @@ p {
  padding-bottom: 2%;
 }
 
-#about h2, #portfolio h2, #blog h2, #contact h2 {
+#about h2, #portfolio h2, #blog h2, #contact h2, #achievements h2 {
   font-size: 1.5rem;
   margin-bottom: 1.2rem;
   color: #fff;
@@ -197,7 +193,7 @@ p {
   padding-bottom: 2%;
 }
 
-#achiements {
+#achievements {
   padding-bottom: 2%;
 }
 
