--- a/style/index.css
+++ b/style/index.css
@@ -458,3 +458,13 @@ footer {
     font-size: 0.6rem; 
   }
 }
+
+.right-toggle {
+  position: fixed;       /* stays in place */
+  bottom: 0px;          /* distance from bottom */
+  right: 0px;           /* distance from right */
+  transform: translateY(-50%); /* perfect vertical centering */
+  z-index: 9999;         /* on top of everything */
+  border-radius: 8px 0 0 8px; /* rounded left side */
+  padding-right: 1%;
+}
