--- a/style/switch.css
+++ b/style/switch.css
@@ -30,7 +30,7 @@
   width: 20px;
   left: 4px;
   bottom: 4px;
-  background-color: black;
+  background-color: #121212;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -74,17 +74,21 @@ body.light-mode .nav-box {
 
 body.light-mode .top-nav h1 {
   margin: 0; 
-  color: black; 
+  color: #121212; 
   font-size: 1.5rem;
 }
 
 body.light-mode .top-nav a {
   text-decoration: none;
-  color: black;
+  color: #121212;
   font-weight: bold;
   transition: color 0.3s;
   cursor: pointer;
   font-size: 1rem;
+}
+
+body.light-mode #about h2, #portfolio h2, #blog h2, #contact h2, #achievements h2, .school-address {
+  color:#121212;
 }
 
 body.light-mode .landing-wrapper {
@@ -98,9 +102,13 @@ body.light-mode .landing-container h2 {
   color: #ce8f13;
 }
 
-body.light-mode .landing-container p {
-  color: black;
+body.light-mode .landing-container p, .about-item h4, .skill h4, .skill-title, .about-section h3{
+  color: #121212;
 }
+
+body.light-mode .card p, .card h3 {
+  color: white;
+} 
 
 body.light-mode .top-nav a.active {
   color: #ffcc00; 
