--- a/style/index.css
+++ b/style/index.css
@@ -208,6 +208,19 @@ p {
   animation: fadeIn 0.5s ease;
 }
 
+.card-container-interest {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.sys {
+  width: 400px;
+  height: 250px;
+  margin-top: 1%;
+}
+
 .card-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -235,6 +248,11 @@ p {
 .card-container h3 {
   font-size: 1.3rem;
 }
+
+.card-container-interest h3 {
+  font-size: 1.3rem;
+}
+
 
 .card p {
   padding: 0.7rem 1rem 0 1rem;
@@ -360,6 +378,10 @@ footer {
   .card-container { 
     grid-template-columns: 1fr 1fr; 
   }
+
+  .card-container-interest {
+    grid-template-columns: 1fr 1fr; 
+  }
 }
 
 /* Large Mobile / Small Tablet (<=768px) */
@@ -408,6 +430,9 @@ footer {
     padding-right: 2rem; 
   }
   .card-container { 
+    grid-template-columns: 1fr; 
+  }
+  .card-container-interest {
     grid-template-columns: 1fr; 
   }
 }
