--- a/style/index.css
+++ b/style/index.css
@@ -230,7 +230,7 @@ p {
   margin-top: 1rem;
 }
 
-.card {
+.card-two {
   background-color: #1e1e1e;
   padding: 1rem;
   border-radius: 0.6rem;
@@ -238,11 +238,13 @@ p {
   transition: transform 0.3s;
 }
 
-.card:hover {
+#gallery .card-two:hover,
+#projects .card-two:hover,
+#achievements .card-two:hover {
   transform: translateY(-0.3rem);
 }
 
-.card img {
+.card-two img {
   width: 100%;
   margin-bottom: 1rem;
 }
@@ -256,7 +258,7 @@ p {
 }
 
 
-.card p {
+.card-two p {
   margin-left: 0.5rem;
   text-align: justify;
   font-size: 1.1rem;
@@ -458,13 +460,36 @@ footer {
     padding-left: 1rem; 
     padding-right: 1rem; 
   }
-  .card h3 { 
+  .card-two h3 { 
     font-size: 1rem; 
   }
-  .card p { 
+  .card-two p { 
     font-size: 0.9rem; 
   }
   footer { 
     font-size: 0.6rem; 
   }
+}
+
+#carouselExampleCaptions {
+  display: flex;
+  justify-content: center; 
+  align-items: center;    
+  height: 100vh; 
+  margin: 0 5% 0 5%;         
+}
+
+.carousel-item img {
+  width: 1500px;
+  height: 600px;
+}
+
+.carousel-control-prev {
+  margin-left: 10%;
+  padding-left: 10%;
+}
+
+.carousel-control-next {
+  padding-right: 10%;
+  margin-right: 10%;
 }
